#bin_PROGRAMS = stress
#noinst_LIBRARIES = libstress.a

SUBDIRS = lib src
#AM_LFLAGS=--header-file=scanner.hh --outfile=scanner.cc
#AM_YFLAGS=-o parser.cc

#stressdir = $(sysconfdir)/src

#libstress_a_SOURCES = 	lib/composite.cc \
#								lib/composite_factory.cc \
#								lib/ok_state.cc \
#								lib/state.cc \
#								lib/test_control.cc
#libstress_a_HEADERS = 	lib/composite_factory.h \
#								lib/composite.h \
#								lib/ok_state.h \
#								lib/state.h \
#								lib/test_control.h
#libstress_adir = $(sysconfdir)/lib
